updated photography image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Currently, I am working on the Barber Brands project and I also have my personal portfolio.</p>
       </div>
       <div class="skill-row">
-        <img class="Photography-img" src="images/Photography.png" alt="camera">
+        <img class="Photography-img" src="images/photography.png" alt="camera">
         <h3>Photography</h3>
         <p>I know how to use cameras and I know all functions of photoshop. <br> I know Adobe Premier and Filmora GO </p>
       </div>
