--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2>Get In Touch</h2>
       <h3>If you also want to a website like this.</h3>
       <p>I can make sure you will get your website on time <br> with all functionality.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:neeleshsavita7049@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
